# copilot-local-rag

./: .gitignore  .vscodeignore  README.md  package.json  pyproject.toml  start.sh
.github/agents/: project-agent.agent.md
backend/: .env  app.py  config.py  data_manager.py  debug_indexer.py  models.py  requirements.txt
backend/admin/: admin.css  admin.js  index.html
backend/pgdb/: pgdb_manager.py
backend/pgdb/sql/: create_tables.sql  pgdb_init.sql  run_sql.sh
backend/routers/: admin.py  data_router.py  download.py  ocr.py  rag.py  vision.py
backend/services/: data_service.py  download_service.py  knowledge_graph_service.py  ocr_service.py  rag_service.py  vision_service.py
backend/services/knowledge_graph/: README.md  analyze_topics.py  feature_generator.py  feature_weights.py  graph_model.py  java_code_indexer.py  keyword_expander.py  tokenization.py  tokenization_utils.py  train_model.py  visualize_graph.py
backend/services/utils/: html_cleaner.py
dummy-servers/: confluence_server.py  generate_dummy_data.py  jira_server.py  logtail_server.py
dummy-servers/proj_java_code/: pom.xml
media/: index.html
repo-ask/: .vscodeignore  README.md  index.js  package.json
repo-ask/src/: bm25.js  confluenceApi.js  extension.js  extension.ts  jiraApi.js  relevance.js  storage.js  textProcessing.js
repo-ask/src/extension/: commands.js  documentService.js  errMap.js  llm.js  lmTools.js  promptContext.js  sidebarController.js
src/: chatParticipant.ts  extension.ts  requestManager.ts  sidebarProvider.ts
src/ocr/: ocrHandler.ts
src/vision/: visionHandler.ts
(+215 files in other folders)
