[tool.poetry]
name = "copilot-local-rag"
version = "0.1.0"
description = "Local RAG system with knowledge graph"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.7"
torch = "^2.2.0"
torch-geometric = "^2.4.0"
torch-scatter = "^2.1.2"
torch-sparse = "^0.6.18"
torch-cluster = "^1.6.3"
torch-spline-conv = "^1.2.2"
scikit-learn = "^1.4.0"
numpy = "^1.26.0"
javalang = "^0.13.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
